# Airhockey2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Vc_example  cmake_install.cmake
lib/: Airhockey.cpp  airhockey.ini  predprey.cpp  predprey.h  proj.cpp  setupErPredprey.py
lib/systemd/: systemd-ac-power  systemd-activate  systemd-backlight  systemd-binfmt  systemd-bootchart  systemd-bus-proxyd  systemd-cgroups-agent  systemd-cryptsetup  systemd-fsck  systemd-fsckd  systemd-hibernate-resume  systemd-hostnamed  systemd-initctl  systemd-journald  systemd-localed  systemd-logind  systemd-modules-load  systemd-networkd  systemd-networkd-wait-online  systemd-quotacheck  systemd-random-seed  systemd-remount-fs  systemd-reply-password  systemd-resolved  systemd-rfkill  systemd-shutdown  systemd-sleep  systemd-socket-proxyd  systemd-sysctl  systemd-timedated  systemd-timesyncd  systemd-udevd  systemd-update-utmp  systemd-user-sessions
lib/systemd/system-generators/: systemd-cryptsetup-generator  systemd-dbus1-generator  systemd-debug-generator  systemd-fstab-generator  systemd-getty-generator  systemd-gpt-auto-generator  systemd-hibernate-resume-generator  systemd-insserv-generator  systemd-rc-local-generator  systemd-system-update-generator  systemd-sysv-generator
lib/udev/: ata_id  cdrom_id  collect  mtd_probe  scsi_id  v4l_id
lib/x86_64-linux-gnu/: libblkid.so.1.1.0  libe2p.so.2.3  libext2fs.so.2.4  libfdisk.so.1.1.0  libmount.so.1.1.0  libsmartcols.so.1.1.0  libss.so.2.0  libuuid.so.1.3.0
src/: main.cpp  proj.cpp
